--- a/stylesheets/freshdesk_rtl.css
+++ b/stylesheets/freshdesk_rtl.css
@@ -18813,13 +18813,23 @@ img[src*="insight.adsrvr.org"] {
   padding: 10px;
 }
 
-/* line 342, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 343, ../../source/assets/stylesheets/page/_landing-page.scss */
 
-#demo-form .demo_form input[type="number"] {
+#demo-form .demo_form input[type=number]::-webkit-inner-spin-button,
+#demo-form .demo_form input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+/* line 349, ../../source/assets/stylesheets/page/_landing-page.scss */
+
+#demo-form .demo_form input[type=number] {
   -moz-appearance: textfield;
 }
 
-/* line 346, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 353, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 #demo-form .textfield #LastName,
 #demo-form .textfield #Email,
@@ -18836,7 +18846,7 @@ img[src*="insight.adsrvr.org"] {
   text-align: right;
 }
 
-/* line 358, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 365, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 #demo-form .textfield .icon-envelope,
 #demo-form .textfield .icon-user,
@@ -18848,27 +18858,27 @@ img[src*="insight.adsrvr.org"] {
   right: 17px;
 }
 
-/* line 366, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 373, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 #demo-form {
   display: none;
   width: 280px;
 }
 
-/* line 371, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 378, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 #demo-form .mkt-check .mktField {
   /*@replace: right*/
   text-align: right;
 }
 
-/* line 374, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 381, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 #demo-form .mkt-check p {
   text-align: right;
 }
 
-/* line 380, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 387, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .form-invalid,
 .form-invalid-text,
@@ -18878,14 +18888,14 @@ img[src*="insight.adsrvr.org"] {
   font-size: 12px;
 }
 
-/* line 385, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 392, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 #landing-signupform {
   display: none;
   width: 320px;
 }
 
-/* line 388, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 395, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 #landing-signupform .signup-big .b-form em.error,
 #landing-signupform .signup-big .lpeRegForm em.error {
@@ -18894,14 +18904,14 @@ img[src*="insight.adsrvr.org"] {
 
 /* Customer Care */
 
-/* line 394, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 401, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .customer-care .khd {
   /*@replace: right*/
   text-align: right;
 }
 
-/* line 397, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 404, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .customer-care h1 {
   font-size: 32px;
@@ -18909,7 +18919,7 @@ img[src*="insight.adsrvr.org"] {
   text-align: right;
 }
 
-/* line 399, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 406, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .customer-care .mail,
 .customer-care .forum,
@@ -18921,14 +18931,14 @@ img[src*="insight.adsrvr.org"] {
   display: inline-block;
 }
 
-/* line 407, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 414, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .customer-care .mail,
 .customer-care .forum {
   background: url(http://d30v3ficwg45bd.cloudfront.net/images/mob-landing-page.png) no-repeat;
 }
 
-/* line 411, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 418, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .customer-care .mail {
   background-position: 0px 0px;
@@ -18936,7 +18946,7 @@ img[src*="insight.adsrvr.org"] {
   height: 58px;
 }
 
-/* line 416, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 423, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .customer-care .forum {
   background-position: 0px -60px;
@@ -18944,7 +18954,7 @@ img[src*="insight.adsrvr.org"] {
   width: 60px;
 }
 
-/* line 422, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 429, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .customer-care .social {
   background: url("../images/mob-social-integration.png") no-repeat;
@@ -18952,7 +18962,7 @@ img[src*="insight.adsrvr.org"] {
   background-position: 3px 0px;
 }
 
-/* line 428, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 435, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .customer-care .support-content {
   float: right;
@@ -18961,38 +18971,38 @@ img[src*="insight.adsrvr.org"] {
   text-align: right;
 }
 
-/* line 435, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 442, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .banner.customer-care {
   padding-top: 70px;
 }
 
-/* line 439, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 446, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-plans .plans-wrapper {
   width: 17.41379%;
   margin-left: 3.2%;
 }
 
-/* line 442, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 449, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-plans .plans-wrapper:last-child {
   margin-left: 0;
 }
 
-/* line 445, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 452, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-plans h2 {
   font-weight: 400;
 }
 
-/* line 450, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 457, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-plans .f-sprout {
   font-weight: 300;
 }
 
-/* line 455, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 462, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-plans .sprout,
 .lp-plans .blossom,
@@ -19003,7 +19013,7 @@ img[src*="insight.adsrvr.org"] {
   margin: 0 auto;
 }
 
-/* line 461, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 468, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-plans .mail,
 .lp-plans .forum,
@@ -19016,7 +19026,7 @@ img[src*="insight.adsrvr.org"] {
   display: inline-block;
 }
 
-/* line 466, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 473, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-plans .forest {
   width: 190px;
@@ -19027,54 +19037,54 @@ img[src*="insight.adsrvr.org"] {
   display: block;
 }
 
-/* line 474, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 481, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-plans .sprout {
   background-position: -138px 0px;
   background-size: 330px;
 }
 
-/* line 479, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 486, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-plans .blossom {
   background-position: -138px -202px;
   background-size: 330px;
 }
 
-/* line 484, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 491, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-plans .garden {
   background-position: -140px -415px;
   background-size: 330px;
 }
 
-/* line 489, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 496, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-plans .estate {
   background-position: -137px -619px;
   background-size: 330px;
 }
 
-/* line 494, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 501, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-plans .plan-content {
   text-align: center;
 }
 
-/* line 496, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 503, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-plans .plan-content h4 {
   font-weight: 600;
   line-height: 1.3;
 }
 
-/* line 507, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 514, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-customers-feedback h2 {
   padding-bottom: 20px;
 }
 
-/* line 511, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 518, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-customers-feedback .cust-image-wrapper {
   width: 20%;
@@ -19082,7 +19092,7 @@ img[src*="insight.adsrvr.org"] {
   margin-left: 20px;
 }
 
-/* line 516, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 523, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-customers-feedback .cus-quote {
   float: right;
@@ -19091,13 +19101,13 @@ img[src*="insight.adsrvr.org"] {
   text-align: right;
 }
 
-/* line 520, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 527, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-customers-feedback .cus-quote h4 {
   font-size: 24px;
 }
 
-/* line 523, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 530, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-customers-feedback .cus-quote h6 {
   margin-top: 0;
@@ -19105,14 +19115,14 @@ img[src*="insight.adsrvr.org"] {
   color: #16a085;
 }
 
-/* line 528, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 535, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-customers-feedback .cus-quote h5 {
   display: inline-block;
   margin-right: 20px;
 }
 
-/* line 534, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 541, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-customers-feedback .cus-img1,
 .lp-customers-feedback .cus-img2,
@@ -19122,7 +19132,7 @@ img[src*="insight.adsrvr.org"] {
   display: inline-block;
 }
 
-/* line 539, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 546, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-customers-feedback .cus-img1,
 .lp-customers-feedback .cus-img2,
@@ -19131,44 +19141,44 @@ img[src*="insight.adsrvr.org"] {
   display: inline-block;
 }
 
-/* line 544, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 551, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-customers-feedback .cus-img1 {
   background-position: 0px -230px;
 }
 
-/* line 547, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 554, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-customers-feedback .cus-img2 {
   background-position: -3px -348px;
 }
 
-/* line 550, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 557, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-customers-feedback .cus-img3 {
   background-position: -3px -475px;
 }
 
 @media only screen and (min-width: 721px) and (max-width: 900px) {
-  /* line 558, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 565, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .customer-care .fg-8 {
     width: 56.89655%;
   }
 
-  /* line 560, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 567, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .customer-care .lp-signup.fg-4 {
     width: 39.65517%;
   }
 
-  /* line 563, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 570, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .customer-care h1 {
     font-size: 24px;
   }
 
-  /* line 565, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 572, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .customer-care .mail,
   .customer-care .forum,
@@ -19176,25 +19186,25 @@ img[src*="insight.adsrvr.org"] {
     margin-left: 12px;
   }
 
-  /* line 567, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 574, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .customer-care .support-content {
     width: 80%;
   }
 
-  /* line 571, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 578, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .lp-plans h2 {
     font-size: 30px;
   }
 
-  /* line 572, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 579, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .lp-plans .f-sprout {
     font-size: 24px;
   }
 
-  /* line 575, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 582, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .lp-plans .plans-wrapper {
     width: 30.41379%;
@@ -19204,7 +19214,7 @@ img[src*="insight.adsrvr.org"] {
     vertical-align: top;
   }
 
-  /* line 583, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 590, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .lp-plans .sprout,
   .lp-plans .blossom,
@@ -19217,31 +19227,31 @@ img[src*="insight.adsrvr.org"] {
     margin: 0 auto;
   }
 
-  /* line 590, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 597, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .lp-plans .sprout {
     background-position: -123px 0px;
   }
 
-  /* line 594, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 601, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .lp-plans .blossom {
     background-position: -124px -179px;
   }
 
-  /* line 598, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 605, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .lp-plans .garden {
     background-position: -124px -365px;
   }
 
-  /* line 602, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 609, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .lp-plans .estate {
     background-position: -122px -544px;
   }
 
-  /* line 605, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 612, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .lp-plans .forest {
     width: 160px;
@@ -19249,20 +19259,20 @@ img[src*="insight.adsrvr.org"] {
     background-size: 160px;
   }
 
-  /* line 613, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 620, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .lp-customers-feedback .cus-quote {
     width: 75%;
   }
 
-  /* line 617, ../../source/assets/stylesheets/page/_landing-page.scss */
+  /* line 624, ../../source/assets/stylesheets/page/_landing-page.scss */
 
   .lp-customers-feedback .cus-quote h4 {
     font-size: 20px;
   }
 }
 
-/* line 624, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 631, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .banner.support-light {
   background-image: url(http://d30v3ficwg45bd.cloudfront.net/images/white-background.jpg);
@@ -19271,13 +19281,13 @@ img[src*="insight.adsrvr.org"] {
   padding-top: 135px;
 }
 
-/* line 629, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 636, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .banner.support-light .banner-form {
   width: 355px;
 }
 
-/* line 633, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 640, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .banner.support-light h1.b-heading {
   color: #4d4d4d;
@@ -19288,7 +19298,7 @@ img[src*="insight.adsrvr.org"] {
   text-align: right;
 }
 
-/* line 641, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 648, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .banner.support-light h1.su-subtitle {
   color: #4d4d4d;
@@ -19299,21 +19309,21 @@ img[src*="insight.adsrvr.org"] {
   text-align: right;
 }
 
-/* line 649, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 656, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .banner.support-light h1.k-heading {
   float: right;
   text-align: right;
 }
 
-/* line 653, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 660, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .banner.support-light .ulcont {
   display: block;
   height: 95px;
 }
 
-/* line 657, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 664, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .banner.support-light .icons {
   width: 90px;
@@ -19321,7 +19331,7 @@ img[src*="insight.adsrvr.org"] {
   float: right;
 }
 
-/* line 662, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 669, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .banner.support-light .contetfl {
   width: 550px;
@@ -19331,21 +19341,21 @@ img[src*="insight.adsrvr.org"] {
   text-align: right;
 }
 
-/* line 667, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 674, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .banner.support-light .contetfl a {
   color: #4d4d4d;
   font-size: 18px;
 }
 
-/* line 671, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 678, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .banner.support-light .contetfl span.light {
   color: #4d4d4d;
   font-size: 15px;
 }
 
-/* line 678, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 685, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-testimonial .customerimg {
   margin-left: 26px;
@@ -19361,7 +19371,7 @@ img[src*="insight.adsrvr.org"] {
   float: right;
 }
 
-/* line 691, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 698, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-testimonial .custcomment {
   width: 400px;
@@ -19370,13 +19380,13 @@ img[src*="insight.adsrvr.org"] {
   text-align: right;
 }
 
-/* line 696, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 703, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-testimonial .custcomment h4 {
   font-size: 20px;
 }
 
-/* line 699, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 706, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .lp-testimonial .heights {
   margin-top: 20px;
@@ -19385,7 +19395,7 @@ img[src*="insight.adsrvr.org"] {
   display: block;
 }
 
-/* line 707, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 714, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .helpdesk-software.crm-land .helpdesk-banner .content-wrapper h1 {
   font-size: 30px;
@@ -19394,7 +19404,7 @@ img[src*="insight.adsrvr.org"] {
   clear: both;
 }
 
-/* line 714, ../../source/assets/stylesheets/page/_landing-page.scss */
+/* line 721, ../../source/assets/stylesheets/page/_landing-page.scss */
 
 .vs-signup {
   text-align: right;
