--- a/stylesheets/page/_landing-page.scss
+++ b/stylesheets/page/_landing-page.scss
@@ -339,7 +339,14 @@
     text-align: center;
     padding: 10px;
 }
-#demo-form .demo_form input[type="number"] {
+#demo-form .demo_form input[type=number]::-webkit-inner-spin-button, 
+#demo-form .demo_form input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+#demo-form .demo_form input[type=number]{
     -moz-appearance: textfield;
 }
 
