--- a/stylesheets/page/_new-tour.scss
+++ b/stylesheets/page/_new-tour.scss
@@ -43,15 +43,25 @@
 	color: #fff;
 	position: relative;
 	padding-top: 170px;
-	h1{
+	h1, h3{
 		font-size: 50px;
 		text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 		font-weight: $font-weight-normal;
+        line-height: 1;
 	}
 	h2{
 		font-size: 40px;
 		font-weight: $font-weight-light;
 	}
+  
+  h3{
+    span{
+        display: block;
+        font-size: 40px;
+        font-weight: 300;
+        margin-bottom: 10px;
+    }
+  }
 }
 
 .tour-slideshow{
@@ -187,7 +197,7 @@ only screen and (                min-resolution: 2dppx) {
 .left-nav{
 	background: url(#{$cdn_path}/images/tour/tour-banner-left-arrow.png) no-repeat;
 	background-size: 25px;
-	margin-top: 69px;
+	/*@replace:67px*/ margin-top: 69px;
 	/*@noflip*/left: -60px;
 }
 .left-nav:hover,.right-nav:hover{ opacity: 1; }
