--- a/stylesheets/page/_new-header.scss
+++ b/stylesheets/page/_new-header.scss
@@ -107,6 +107,7 @@
 			padding-top: 10px;
 			padding-bottom: 10px;
 			padding-left: 15px;
+            padding-right: 10px;
 		}
 	}
 	.h-head:hover:after{
