--- a/stylesheets/page/_new-tour.scss
+++ b/stylesheets/page/_new-tour.scss
@@ -798,7 +798,7 @@ only screen and (                min-resolution: 2dppx) {
 	width: 29.5%;
 	float: left;
 	margin-left: 3.44828%;
-	.tour-widget-header{ height: 45px; }
+	.tour-widget-header{ min-height: 45px; }
 	.tour-widget-img{ float: left; }
 	.tour-widget-title{ float: left; width: 265px; padding-left: 10px; text-align: left;}
 	h4{ 
