--- a/stylesheets/page/_language.scss
+++ b/stylesheets/page/_language.scss
@@ -25,18 +25,21 @@
       font-size: 35px;
       padding-right: 10%;
       padding-left: 10%;
+      font-weight: 200;
       
       span{
         font-size: 25px;
       }
     }
   }
-  .tour-content-wrapper h1, .tour-content-wrapper h3, .gamma, h3, .bs-heading, .helpdesk-software .content-wrapper h1, .helpdesk-software .helpdesk-banner .content-wrapper h1, .pl-coin, .lp-plans h2, .lp-customers-feedback h2, .pr-sign-link h5, .pricing-cal h1, .secondary-title h2, .tour-secondary-banner h1, .tour-content-wrapper h2, .poly-banner .s-heading, .poly-banner .casestudy-banner h2, .casestudy-banner .poly-banner h2, .poly-center-banner .s-heading, .poly-center-banner .casestudy-banner h2, .casestudy-banner .poly-center-banner h2, .banner .s-heading, .banner .casestudy-banner h2, .casestudy-banner .banner h2, .inner-banner-strip .s-heading, .signup-banner-strip .s-heading, .inner-banner-strip .casestudy-banner h2, .casestudy-banner .inner-banner-strip h2, .signup-banner-strip .casestudy-banner h2, .casestudy-banner .signup-banner-strip h2, .fd-home-content h1, .beta, h2, .s-heading, .casestudy-banner h2, .banner.poly-customer-banner .poly-customer-content h2, .contact-wrapper h1, .pr-c-intro h2, .banner.poly-pricing-banner h2{
+  .tour-content-wrapper h1, .tour-content-wrapper h3, .gamma, h3, .bs-heading, .helpdesk-software .content-wrapper h1, .helpdesk-software .helpdesk-banner .content-wrapper h1, .pl-coin, .lp-plans h2, .lp-customers-feedback h2, .pr-sign-link h5, .pricing-cal h1, .secondary-title h2, .tour-secondary-banner h1, .tour-content-wrapper h2, .poly-banner .s-heading, .poly-banner .casestudy-banner h2, .casestudy-banner .poly-banner h2, .poly-center-banner .s-heading, .poly-center-banner .casestudy-banner h2, .casestudy-banner .poly-center-banner h2, .banner .s-heading, .banner .casestudy-banner h2, .casestudy-banner .banner h2, .inner-banner-strip .s-heading, .signup-banner-strip .s-heading, .inner-banner-strip .casestudy-banner h2, .casestudy-banner .inner-banner-strip h2, .signup-banner-strip .casestudy-banner h2, .casestudy-banner .signup-banner-strip h2, .fd-home-content h1, .beta, h2, .s-heading, .casestudy-banner h2, .banner.poly-customer-banner .poly-customer-content h2, .contact-wrapper h1, .pr-c-intro h2, .banner.poly-pricing-banner h2, .bottom-wrapper .fg-4 h2{
     font-size: 35px;
+    font-weight: 200;
   }
   .banner h1.b-heading{
     font-size: 42px;
     margin-bottom: 20px;
+    font-weight: 200;
   }
   .left-nav{
     margin-top: 83px;
@@ -60,6 +63,7 @@
   }
   .delta, h4, .footer-strip h4, .content-strip h3, .teelbg h3, .whitebg h3, .su-subtitle, .pl-free, .lp-plans .f-sprout, .pr-c-intro h4, .pr-day-pass h3, .comparison-desk.stuck h1, .tour-globe .tour-widget h4{
     font-size: 1.35rem;
+    font-weight: 200;
   }
   .fd-home-sticky .sub-menu li a, .fd-page-sticky .sub-menu li a{
     font-size: 14px;
@@ -80,6 +84,7 @@
   }
   h2.epsilon{
     font-size: 20px;
+    font-weight: 200;
   }
   .landing-terms{
     padding:20px;
@@ -87,6 +92,7 @@
   .helpdesk-features .helpdesk-features-content{
     h4{
       font-size: 18px;
+      font-weight: 200;
     }
     p{
       font-size: 16px;
@@ -96,6 +102,7 @@
   .landing-page-content h1, .l-content h1{
     font-size: 30px;
     margin-top: 0;
+    font-weight: 200;
   }
   .landing-right-panel .landing-signup-form{
     margin-top: 30px;
@@ -131,5 +138,12 @@
         margin-right: 10px;
       }
     }
+  }
+  .home-tour-wrapper .home-tour-link .tour-link-content h3{
+    font-size: 38px;
+    font-weight: 200;
+  }
+  .home-tour-wrapper .home-tour .home-tour-content p{
+    font-size: 30px;
   }
 }
