Customer-care-tools Pricing Styles

--- a/stylesheets/page/_landing-page.scss
+++ b/stylesheets/page/_landing-page.scss
@@ -579,33 +579,33 @@
             vertical-align: top;
 		}
 
-		.sprout, .blossom, .garden, .estate {
-			width: 166px;
-			height: 155px;
-			background-size: 290px;
-			display: block;
-			margin: 0 auto;
-		}
-		.sprout {
-			background-position: -123px 0px;
-		}
+		// .sprout, .blossom, .garden, .estate {
+		// 	width: 166px;
+		// 	height: 155px;
+		// 	background-size: 290px;
+		// 	display: block;
+		// 	margin: 0 auto;
+		// }
+		// .sprout {
+		// 	background-position: -123px 0px;
+		// }
 
-		.blossom {
-			background-position: -124px -179px;
-		}
+		// .blossom {
+		// 	background-position: -124px -179px;
+		// }
 
-		.garden {
-			background-position: -124px -365px;
-		}
+		// .garden {
+		// 	background-position: -124px -365px;
+		// }
 
-		.estate{
-			background-position: -122px -544px;
-		}
-		.forest{
-			width: 160px;
-			height: 155px;
-			background-size: 160px;
-		}
+		// .estate{
+		// 	background-position: -122px -544px;
+		// }
+		// .forest{
+		// 	width: 160px;
+		// 	height: 155px;
+		// 	background-size: 160px;
+		// }
 	}
 
 	.lp-customers-feedback{
