--- a/stylesheets/page/_new-header.scss
+++ b/stylesheets/page/_new-header.scss
@@ -101,6 +101,8 @@
 		padding-bottom: 0px;
 		padding-left: 0px;
 		width: 100%;
+		box-sizing: border-box;
+
 		&:hover a{ color: #16a085; }
 		a{ 
 			display: block;
